# sps_genai

./: .dockerignore  .gitignore  DOCKER_GUIDE.md  Dockerfile  README.md  assignment2.py  module4_class_activity.ipynb  module5_class_activity.ipynb  pyproject.toml  requirements.txt  test_api.py
app/: bigram_model.py  gpt2_qa.py  main.py
assignment2/: cnn_a2_cifar10.pt
assignment4/: README.md  train_diffusion_cifar10.py  train_ebm_cifar10.py  train_gan_offline.py
assignment5/: README.md  test_gpt2_api.py  train_gpt2_squad.py
data/: ebm_cifar10.pth  gan_G.pth
helper_lib/: data_loader.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
models/gpt2_squad_finetuned/: config.json  generation_config.json  training_info.json
